--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Profile Card — Huy</title>
+  <title>HuyPhan</title>
   <link rel="stylesheet" href="styels.css">
   <style>
   </style>
